[gd_scene load_steps=9 format=3 uid="uid://fden547qx1xs"]

[ext_resource type="Script" path="res://Ardor and the World Undone/Path of the Digger/components/Actor.gd" id="1_gnqig"]
[ext_resource type="Texture2D" uid="uid://de647j026sn50" path="res://Ardor and the World Undone/Production/Art/Icons/FennConcept.png" id="2_v3xr7"]
[ext_resource type="Script" path="res://Ardor and the World Undone/Path of the Digger/components/HitBox.gd" id="3_64bi3"]
[ext_resource type="PackedScene" uid="uid://dupwhfviqcrps" path="res://Ardor and the World Undone/Path of the Digger/scenes/components/health_component.tscn" id="4_3vgne"]
[ext_resource type="PackedScene" uid="uid://dhwqfj3ba3jbd" path="res://Ardor and the World Undone/Path of the Digger/scenes/components/move_component.tscn" id="5_xfidg"]
[ext_resource type="PackedScene" uid="uid://di3fbt85vsjxq" path="res://Ardor and the World Undone/Path of the Digger/scenes/components/attack_component.tscn" id="7_wk6ql"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_idx2s"]
radius = 2.83019
height = 10.3896

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vg511"]
size = Vector2(5.21038, 8.70036)

[node name="Fenn" type="CharacterBody2D" node_paths=PackedStringArray("hp", "go", "hit_box")]
collision_mask = 6
motion_mode = 1
script = ExtResource("1_gnqig")
hp = NodePath("HP")
go = NodePath("MoveComponent")
hit_box = NodePath("HitBox")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_v3xr7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6.36, 6.16)
shape = SubResource("CapsuleShape2D_idx2s")

[node name="HitBox" type="Area2D" parent="."]
scale = Vector2(1.10224, 1.13258)
collision_mask = 14
script = ExtResource("3_64bi3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-4.32607e-07, 0.441472)
scale = Vector2(6.61665, 6.39344)
shape = SubResource("RectangleShape2D_vg511")
debug_color = Color(0.757966, 0.439529, 0.315507, 0.42)

[node name="HP" parent="." instance=ExtResource("4_3vgne")]
max_health = 10
current_health = 10
thematic = Color(0, 0.563816, 0, 1)

[node name="MoveComponent" parent="." instance=ExtResource("5_xfidg")]
acceleration = 30
friction = 150
max_speed = 500
jump_strength = 400

[node name="AttackComponent" parent="." instance=ExtResource("7_wk6ql")]
atk_1 = "res://Ardor and the World Undone/Path of the Digger/scenes/attacks/blaze_tackle.tscn"

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="death_knell" from="HP" to="." method="_on_health_component_death_knell"]
