[gd_scene load_steps=10 format=3 uid="uid://c7gchb0ip2nfq"]

[ext_resource type="Script" path="res://Ardor and the World Undone/Path of the Digger/components/Actor.gd" id="1_k2it5"]
[ext_resource type="Texture2D" uid="uid://cnaocjnyq3gmb" path="res://Ardor and the World Undone/Production/Art/Icons/WillConcept.png" id="2_1tyif"]
[ext_resource type="Script" path="res://Ardor and the World Undone/Path of the Digger/components/HitBox.gd" id="3_wqrkk"]
[ext_resource type="PackedScene" uid="uid://dupwhfviqcrps" path="res://Ardor and the World Undone/Path of the Digger/scenes/components/health_component.tscn" id="4_btpvm"]
[ext_resource type="PackedScene" uid="uid://dhwqfj3ba3jbd" path="res://Ardor and the World Undone/Path of the Digger/scenes/components/move_component.tscn" id="5_arssm"]
[ext_resource type="PackedScene" uid="uid://ce4wum3m48wi2" path="res://Ardor and the World Undone/Path of the Digger/scenes/components/user_input_component.tscn" id="6_qtc5s"]
[ext_resource type="PackedScene" uid="uid://di3fbt85vsjxq" path="res://Ardor and the World Undone/Path of the Digger/scenes/components/attack_component.tscn" id="9_q62d3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3olpp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vg511"]

[node name="Will" type="CharacterBody2D" node_paths=PackedStringArray("hp", "go", "hit_box")]
scale = Vector2(0.5, 0.5)
collision_mask = 6
motion_mode = 1
script = ExtResource("1_k2it5")
hp = NodePath("HP")
go = NodePath("MoveComponent")
hit_box = NodePath("HitBox")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.121, 0.396, 29.189, 1)
texture = ExtResource("2_1tyif")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6.36, 6.16)
shape = SubResource("CircleShape2D_3olpp")

[node name="HitBox" type="Area2D" parent="."]
scale = Vector2(1.10224, 1.13258)
collision_mask = 14
script = ExtResource("3_wqrkk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
scale = Vector2(6.61665, 6.39344)
shape = SubResource("RectangleShape2D_vg511")

[node name="HP" parent="." instance=ExtResource("4_btpvm")]
max_health = 1
current_health = 1

[node name="MoveComponent" parent="." instance=ExtResource("5_arssm")]
acceleration = 10
friction = 15
max_speed = 20

[node name="UserInputComponent" parent="." instance=ExtResource("6_qtc5s")]

[node name="AttackComponent" parent="." instance=ExtResource("9_q62d3")]
atk_1 = "res://Ardor and the World Undone/Path of the Digger/scenes/attacks/water_bolt.tscn"

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
